tests/fixtures/errors/invalid_group_mismatched_end_keyword.puml
@startuml
participant A
participant B
alt branch
  A -> B : ping
end par
@enduml
